2005-04-25  Mark McLoughlin  <mark@skynet.ie>

	Pointed out by Gustavo Carneiro <gjc@inescporto.pt> in
	bug #300804

	* gconf/gconf-enum-types.[ch]: run "make regenerate-built-sources"
	so that we get GCONF_TYPE_UNSET_FLAGS.
	
	* gconf/gconf-error.h,
	  gconf/gconf-value.h: remove unneccessary glib-mkenums options
	from C comment.
	
	* gconf/regenerate-enum-footer.sh,
	  gconf/regenerate-enum-header.sh: tweak the arguments to glib-mkenums
	so that we get the same output that we were getting before and the
	command line is a wee bit more readable.

2005-04-18  Mark McLoughlin  <mark@skynet.ie>

	* backends/evoldap-backend.c, backends/evoldap.conf,
	  backends/evoldap.schema, backends/README.evoldap:
	Add Evolution mail account LDAP backend.
	
	* configure.in, backends/Makefile.am: build the backend
	if we can find the openldap library and header.

2005-05-07  Gareth Owen  <gowen72@yahoo.com>

	* po/en_GB.po: Updated British English translation.

2005-04-04  Mark McLoughlin  <mark@skynet.ie>

	Patch from Stepan Kasal  <kasal@ucw.cz>

	* gconf-2.m4.in (AM_GCONF_SOURCE_2): Use "--enable-schemas-install",
	not "--disable-schemas-install", in the error message; one has to
	give "--enable-schemas-install=foo" to get here, the form
	"--disable-schemas-install=*" is refused immediately by the init
	code of the configure script.

2005-03-30  Steve Murphy  <murf@e-tools.com>

        * configure.in: Added "rw" to ALL_LINGUAS.

2005-03-27  Tor Lillqvist  <tml@novell.com>

	* configure.in: Apparently AC_LIBTOOL_WIN32_DLL isn't deprecated
	after all, and in fact necessary with HEAD libtool.

2005-03-23  Tor Lillqvist  <tml@novell.com>

	* gconf/gconfd.c (test_safe_tmp_dir): Nah, stat() isn't useful for
	permission checking on Win32. Bypass for now on Win32.

2005-03-18  Tor Lillqvist  <tml@novell.com>

	Port to Windows:
	
	* gconf-zip.in: New file, script to build zipfile-based
	distribution for Windows.

	* Makefile.am
	* configure.in: Distribute and expand it.
