@@ -1,3 +1,7 @@
+2005-04-27  Mark McLoughlin  <mark@skynet.ie>
+
+	* backends/Makefile.am: link the evoldap backend with libxml.
+
 2005-04-25  Mark McLoughlin  <mark@skynet.ie>
 
 	Pointed out by Gustavo Carneiro <gjc@inescporto.pt> in
